ncc/testsuite/negative/where-constraints4.n
abstract class A
{
  public this () { //it's ok, it can be called as some class's base ()
  }
}

module Go
{
  f[T] (_ : T) : void where T : new () {
    _ = T ();
  }
  Main () : void {
    f (null : A); // E: must have a public parameterless constructor and must not be abstract
  }
}
